--- a/downloads/mfis-pubs.bib
+++ b/downloads/mfis-pubs.bib
@@ -8,11 +8,695 @@
 
 
 
+
+%%last update november 2023 cesar.
+
+
+@article{DBLP:journals/tse/CornejoRAF23,
+	author = {C{\'{e}}sar Cornejo and Germ{\'{a}}n Regis and Nazareno Aguirre and Marcelo F. Frias},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/journals/tse/CornejoRAF23.bib},
+	date-added = {2023-12-08 17:22:51 -0300},
+	date-modified = {2023-12-08 17:22:51 -0300},
+	doi = {10.1109/TSE.2023.3320625},
+	journal = {{IEEE} Trans. Software Eng.},
+	number = {11},
+	pages = {4946--4963},
+	timestamp = {Wed, 06 Dec 2023 00:00:00 +0100},
+	title = {A Study of the Electrum and DynAlloy Dynamic Behavior Notations},
+	url = {https://doi.org/10.1109/TSE.2023.3320625},
+	volume = {49},
+	year = {2023},
+	bdsk-url-1 = {https://dblp.org/rec/journals/tse/CornejoRAF23},
+	bdsk-url-2 = {https://doi.org/10.1109/TSE.2023.3320625}}
+
+@article{DBLP:journals/corr/abs-2303-05213,
+	author = {Luiz Carvalho and Renzo Degiovanni and Mat{\'{\i}}as Brizzio and Maxime Cordy and Nazareno Aguirre and Yves Le Traon and Mike Papadakis},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/journals/corr/abs-2303-05213.bib},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.48550/ARXIV.2303.05213},
+	eprint = {2303.05213},
+	eprinttype = {arXiv},
+	journal = {CoRR},
+	timestamp = {Wed, 15 Mar 2023 00:00:00 +0100},
+	title = {ACoRe: Automated Goal-Conflict Resolution},
+	url = {https://doi.org/10.48550/arXiv.2303.05213},
+	volume = {abs/2303.05213},
+	year = {2023},
+	bdsk-url-1 = {https://dblp.org/rec/journals/corr/abs-2303-05213},
+	bdsk-url-2 = {https://doi.org/10.48550/arXiv.2303.05213}}
+
+@article{DBLP:journals/corr/abs-2301-12403,
+	author = {Renzo Degiovanni and Facundo Molina and Agustin Nolasco and Nazareno Aguirre and Mike Papadakis},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/journals/corr/abs-2301-12403.bib},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.48550/ARXIV.2301.12403},
+	eprint = {2301.12403},
+	eprinttype = {arXiv},
+	journal = {CoRR},
+	timestamp = {Wed, 01 Feb 2023 00:00:00 +0100},
+	title = {Specification Inference for Evolving Systems},
+	url = {https://doi.org/10.48550/arXiv.2301.12403},
+	volume = {abs/2301.12403},
+	year = {2023},
+	bdsk-url-1 = {https://dblp.org/rec/journals/corr/abs-2301-12403},
+	bdsk-url-2 = {https://doi.org/10.48550/arXiv.2301.12403}}
+
+@article{DBLP:journals/corr/abs-2301-12284,
+	author = {Aayush Garg and Renzo Degiovanni and Facundo Molina and Mike Papadakis and Nazareno Aguirre and Maxime Cordy and Yves Le Traon},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/journals/corr/abs-2301-12284.bib},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.48550/ARXIV.2301.12284},
+	eprint = {2301.12284},
+	eprinttype = {arXiv},
+	journal = {CoRR},
+	timestamp = {Wed, 01 Feb 2023 00:00:00 +0100},
+	title = {Assertion Inferring Mutants},
+	url = {https://doi.org/10.48550/arXiv.2301.12284},
+	volume = {abs/2301.12284},
+	year = {2023},
+	bdsk-url-1 = {https://dblp.org/rec/journals/corr/abs-2301-12284},
+	bdsk-url-2 = {https://doi.org/10.48550/arXiv.2301.12284}}
+
+@inproceedings{DBLP:conf/kbse/MolinadA23,
+	author = {Facundo Molina and Marcelo d'Amorim and Nazareno Aguirre},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/kbse/MolinadA23.bib},
+	booktitle = {38th {IEEE/ACM} International Conference on Automated Software Engineering, {ASE} 2023, Luxembourg, September 11-15, 2023},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1109/ASE56229.2023.00024},
+	pages = {2094--2097},
+	publisher = {{IEEE}},
+	timestamp = {Thu, 16 Nov 2023 09:03:51 +0100},
+	title = {SpecFuzzer: {A} Tool for Inferring Class Specifications via Grammar-Based Fuzzing},
+	url = {https://doi.org/10.1109/ASE56229.2023.00024},
+	year = {2023},
+	bdsk-url-1 = {https://dblp.org/rec/conf/kbse/MolinadA23},
+	bdsk-url-2 = {https://doi.org/10.1109/ASE56229.2023.00024}}
+
+@inproceedings{DBLP:conf/issta/MolinaPAF23,
+	author = {Facundo Molina and Pablo Ponzio and Nazareno Aguirre and Marcelo F. Frias},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/issta/MolinaPAF23.bib},
+	booktitle = {Proceedings of the 32nd {ACM} {SIGSOFT} International Symposium on Software Testing and Analysis, {ISSTA} 2023, Seattle, WA, USA, July 17-21, 2023},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1145/3597926.3604928},
+	editor = {Ren{\'{e}} Just and Gordon Fraser},
+	pages = {1519--1522},
+	publisher = {{ACM}},
+	timestamp = {Mon, 17 Jul 2023 11:49:17 +0200},
+	title = {EvoSpex: {A} Search-Based Tool for Postcondition Inference},
+	url = {https://doi.org/10.1145/3597926.3604928},
+	year = {2023},
+	bdsk-url-1 = {https://dblp.org/rec/conf/issta/MolinaPAF23},
+	bdsk-url-2 = {https://doi.org/10.1145/3597926.3604928}}
+
+@inproceedings{DBLP:conf/issre/GargDMCAPT23,
+	author = {Aayush Garg and Renzo Degiovanni and Facundo Molina and Maxime Cordy and Nazareno Aguirre and Mike Papadakis and Yves Le Traon},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/issre/GargDMCAPT23.bib},
+	booktitle = {34th {IEEE} International Symposium on Software Reliability Engineering, {ISSRE} 2023, Florence, Italy, October 9-12, 2023},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1109/ISSRE59848.2023.00039},
+	pages = {623--634},
+	publisher = {{IEEE}},
+	timestamp = {Tue, 14 Nov 2023 00:00:00 +0100},
+	title = {Enabling Efficient Assertion Inference},
+	url = {https://doi.org/10.1109/ISSRE59848.2023.00039},
+	year = {2023},
+	bdsk-url-1 = {https://dblp.org/rec/conf/issre/GargDMCAPT23},
+	bdsk-url-2 = {https://doi.org/10.1109/ISSRE59848.2023.00039}}
+
+@inproceedings{DBLP:conf/issre/CopiaMAFGP23,
+	author = {Juan Manuel Copia and Facundo Molina and Nazareno Aguirre and Marcelo F. Frias and Alessandra Gorla and Pablo Ponzio},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/issre/CopiaMAFGP23.bib},
+	booktitle = {34th {IEEE} International Symposium on Software Reliability Engineering, {ISSRE} 2023, Florence, Italy, October 9-12, 2023},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1109/ISSRE59848.2023.00080},
+	pages = {752--762},
+	publisher = {{IEEE}},
+	timestamp = {Tue, 14 Nov 2023 16:09:47 +0100},
+	title = {Precise Lazy Initialization for Programs with Complex Heap Inputs},
+	url = {https://doi.org/10.1109/ISSRE59848.2023.00080},
+	year = {2023},
+	bdsk-url-1 = {https://dblp.org/rec/conf/issre/CopiaMAFGP23},
+	bdsk-url-2 = {https://doi.org/10.1109/ISSRE59848.2023.00080}}
+
+@inproceedings{DBLP:conf/gecco/BrizzioCPSAD23,
+	author = {Mat{\'{\i}}as Brizzio and Maxime Cordy and Mike Papadakis and C{\'{e}}sar S{\'{a}}nchez and Nazareno Aguirre and Renzo Degiovanni},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/gecco/BrizzioCPSAD23.bib},
+	booktitle = {Proceedings of the Genetic and Evolutionary Computation Conference, {GECCO} 2023, Lisbon, Portugal, July 15-19, 2023},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1145/3583131.3590454},
+	editor = {Sara Silva and Lu{\'{\i}}s Paquete},
+	pages = {1499--1507},
+	publisher = {{ACM}},
+	timestamp = {Sat, 30 Sep 2023 01:00:00 +0200},
+	title = {Automated Repair of Unrealisable {LTL} Specifications Guided by Model Counting},
+	url = {https://doi.org/10.1145/3583131.3590454},
+	year = {2023},
+	bdsk-url-1 = {https://dblp.org/rec/conf/gecco/BrizzioCPSAD23},
+	bdsk-url-2 = {https://doi.org/10.1145/3583131.3590454}}
+
+@inproceedings{DBLP:conf/fase/PolitanoBMAFP23,
+	author = {Mariano Politano and Valeria S. Bengolea and Facundo Molina and Nazareno Aguirre and Marcelo F. Frias and Pablo Ponzio},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/fase/PolitanoBMAFP23.bib},
+	booktitle = {Fundamental Approaches to Software Engineering - 26th International Conference, {FASE} 2023, Held as Part of the European Joint Conferences on Theory and Practice of Software, {ETAPS} 2023, Paris, France, April 22-27, 2023, Proceedings},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1007/978-3-031-30826-0\_6},
+	editor = {Leen Lambers and Sebasti{\'{a}}n Uchitel},
+	pages = {111--132},
+	publisher = {Springer},
+	series = {Lecture Notes in Computer Science},
+	timestamp = {Sat, 13 May 2023 01:00:00 +0200},
+	title = {Efficient Bounded Exhaustive Input Generation from Program APIs},
+	url = {https://doi.org/10.1007/978-3-031-30826-0\_6},
+	volume = {13991},
+	year = {2023},
+	bdsk-url-1 = {https://dblp.org/rec/conf/fase/PolitanoBMAFP23},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-031-30826-0_6}}
+
+@inproceedings{DBLP:conf/fase/CarvalhoDBCATP23,
+	author = {Luiz Carvalho and Renzo Degiovanni and Mat{\'{\i}}as Brizzio and Maxime Cordy and Nazareno Aguirre and Yves Le Traon and Mike Papadakis},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/fase/CarvalhoDBCATP23.bib},
+	booktitle = {Fundamental Approaches to Software Engineering - 26th International Conference, {FASE} 2023, Held as Part of the European Joint Conferences on Theory and Practice of Software, {ETAPS} 2023, Paris, France, April 22-27, 2023, Proceedings},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1007/978-3-031-30826-0\_1},
+	editor = {Leen Lambers and Sebasti{\'{a}}n Uchitel},
+	pages = {3--25},
+	publisher = {Springer},
+	series = {Lecture Notes in Computer Science},
+	timestamp = {Sat, 30 Sep 2023 01:00:00 +0200},
+	title = {ACoRe: Automated Goal-Conflict Resolution},
+	url = {https://doi.org/10.1007/978-3-031-30826-0\_1},
+	volume = {13991},
+	year = {2023},
+	bdsk-url-1 = {https://dblp.org/rec/conf/fase/CarvalhoDBCATP23},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-031-30826-0_1}}
+
+@inproceedings{DBLP:conf/atal/ArecesCCFS23,
+	author = {Carlos Areces and Valentin Cassano and Pablo F. Castro and Raul Fervari and Andr{\'{e}}s R. Saravia},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/atal/ArecesCCFS23.bib},
+	booktitle = {Proceedings of the 2023 International Conference on Autonomous Agents and Multiagent Systems, {AAMAS} 2023, London, United Kingdom, 29 May 2023 - 2 June 2023},
+	date-added = {2023-12-05 16:05:52 -0300},
+	date-modified = {2023-12-05 16:05:52 -0300},
+	doi = {10.5555/3545946.3598659},
+	editor = {Noa Agmon and Bo An and Alessandro Ricci and William Yeoh},
+	pages = {364--372},
+	publisher = {{ACM}},
+	timestamp = {Tue, 23 May 2023 14:27:14 +0200},
+	title = {A Deontic Logic of Knowingly Complying},
+	url = {https://dl.acm.org/doi/10.5555/3545946.3598659},
+	year = {2023},
+	bdsk-url-1 = {https://dblp.org/rec/conf/atal/ArecesCCFS23},
+	bdsk-url-2 = {https://dl.acm.org/doi/10.5555/3545946.3598659}}
+
+@inproceedings{DBLP:conf/jelia/ArecesCCFS23,
+	author = {Carlos Areces and Valentin Cassano and Pablo F. Castro and Raul Fervari and Andr{\'{e}}s R. Saravia},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/jelia/ArecesCCFS23.bib},
+	booktitle = {Logics in Artificial Intelligence - 18th European Conference, {JELIA} 2023, Dresden, Germany, September 20-22, 2023, Proceedings},
+	date-added = {2023-12-05 16:05:52 -0300},
+	date-modified = {2023-12-05 16:05:52 -0300},
+	doi = {10.1007/978-3-031-43619-2\_28},
+	editor = {Sarah Alice Gaggl and Maria Vanina Martinez and Magdalena Ortiz},
+	pages = {405--419},
+	publisher = {Springer},
+	series = {Lecture Notes in Computer Science},
+	timestamp = {Thu, 28 Sep 2023 17:18:56 +0200},
+	title = {How Easy it is to Know How: An Upper Bound for the Satisfiability Problem},
+	url = {https://doi.org/10.1007/978-3-031-43619-2\_28},
+	volume = {14281},
+	year = {2023},
+	bdsk-url-1 = {https://dblp.org/rec/conf/jelia/ArecesCCFS23},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-031-43619-2_28}}
+
+@inproceedings{DBLP:journals/corr/abs-2309-07309,
+	author = {Pablo F. Castro and Pedro R. D'Argenio and Ramiro Demasi and Luciano Putruele},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/journals/corr/abs-2309-07309.bib},
+	booktitle = {Proceedings Combined 30th International Workshop on Expressiveness in Concurrency and 20th Workshop on Structural Operational Semantics, {EXPRESS/SOS} 2023, and 20th Workshop on Structural Operational SemanticsAntwerp, Belgium, 18th September 2023},
+	date-added = {2023-12-05 16:05:52 -0300},
+	date-modified = {2023-12-05 16:05:52 -0300},
+	doi = {10.4204/EPTCS.387.10},
+	editor = {Claudio Antares Mezzina and Georgiana Caltais},
+	pages = {132--148},
+	series = {{EPTCS}},
+	timestamp = {Wed, 25 Oct 2023 16:09:20 +0200},
+	title = {Quantifying Masking Fault-Tolerance via Fair Stochastic Games},
+	url = {https://doi.org/10.4204/EPTCS.387.10},
+	volume = {387},
+	year = {2023},
+	bdsk-url-1 = {https://dblp.org/rec/journals/corr/abs-2309-07309},
+	bdsk-url-2 = {https://doi.org/10.4204/EPTCS.387.10}}
+
+@article{DBLP:journals/corr/abs-2309-17094,
+	author = {Carlos Areces and Valentin Cassano and Raul Fervari and Pablo F. Castro and Andr{\'{e}}s R. Saravia},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/journals/corr/abs-2309-17094.bib},
+	date-added = {2023-12-05 16:05:52 -0300},
+	date-modified = {2023-12-05 16:05:52 -0300},
+	doi = {10.48550/ARXIV.2309.17094},
+	eprint = {2309.17094},
+	eprinttype = {arXiv},
+	journal = {CoRR},
+	timestamp = {Tue, 17 Oct 2023 01:00:00 +0200},
+	title = {How Easy it is to Know How: An Upper Bound for the Satisfiability Problem},
+	url = {https://doi.org/10.48550/arXiv.2309.17094},
+	volume = {abs/2309.17094},
+	year = {2023},
+	bdsk-url-1 = {https://dblp.org/rec/journals/corr/abs-2309-17094},
+	bdsk-url-2 = {https://doi.org/10.48550/arXiv.2309.17094}}
+
+
+%%2022
+
+@inproceedings{DBLP:conf/cav/CastroDDP22,
+	author = {Pablo F. Castro and Pedro R. D'Argenio and Ramiro Demasi and Luciano Putruele},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/cav/CastroDDP22.bib},
+	booktitle = {Computer Aided Verification - 34th International Conference, {CAV} 2022, Haifa, Israel, August 7-10, 2022, Proceedings, Part {II}},
+	date-added = {2023-12-05 16:05:52 -0300},
+	date-modified = {2023-12-05 16:05:52 -0300},
+	doi = {10.1007/978-3-031-13188-2\_3},
+	editor = {Sharon Shoham and Yakir Vizel},
+	pages = {48--69},
+	publisher = {Springer},
+	series = {Lecture Notes in Computer Science},
+	timestamp = {Thu, 25 Aug 2022 01:00:00 +0200},
+	title = {Playing Against Fair Adversaries in Stochastic Games with Total Rewards},
+	url = {https://doi.org/10.1007/978-3-031-13188-2\_3},
+	volume = {13372},
+	year = {2022},
+	bdsk-url-1 = {https://dblp.org/rec/conf/cav/CastroDDP22},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-031-13188-2_3}}
+
+@inproceedings{DBLP:conf/tacas/PutrueleDCD22,
+	author = {Luciano Putruele and Ramiro Demasi and Pablo F. Castro and Pedro R. D'Argenio},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/tacas/PutrueleDCD22.bib},
+	booktitle = {Tools and Algorithms for the Construction and Analysis of Systems - 28th International Conference, {TACAS} 2022, Held as Part of the European Joint Conferences on Theory and Practice of Software, {ETAPS} 2022, Munich, Germany, April 2-7, 2022, Proceedings, Part {I}},
+	date-added = {2023-12-05 16:05:52 -0300},
+	date-modified = {2023-12-05 16:05:52 -0300},
+	doi = {10.1007/978-3-030-99524-9\_22},
+	editor = {Dana Fisman and Grigore Rosu},
+	pages = {396--403},
+	publisher = {Springer},
+	series = {Lecture Notes in Computer Science},
+	timestamp = {Fri, 29 Apr 2022 14:50:36 +0200},
+	title = {MaskD: {A} Tool for Measuring Masking Fault-Tolerance},
+	url = {https://doi.org/10.1007/978-3-030-99524-9\_22},
+	volume = {13243},
+	year = {2022},
+	bdsk-url-1 = {https://dblp.org/rec/conf/tacas/PutrueleDCD22},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-030-99524-9_22}}
+
+@article{DBLP:journals/corr/abs-2207-02045,
+	author = {Pablo F. Castro and Pedro R. D'Argenio and Luciano Putruele and Ramiro Demasi},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/journals/corr/abs-2207-02045.bib},
+	date-added = {2023-12-05 16:05:52 -0300},
+	date-modified = {2023-12-05 16:05:52 -0300},
+	doi = {10.48550/ARXIV.2207.02045},
+	eprint = {2207.02045},
+	eprinttype = {arXiv},
+	journal = {CoRR},
+	timestamp = {Wed, 06 Jul 2022 01:00:00 +0200},
+	title = {A Stochastic Game Approach to Masking Fault-Tolerance: Bisimulation and Quantification},
+	url = {https://doi.org/10.48550/arXiv.2207.02045},
+	volume = {abs/2207.02045},
+	year = {2022},
+	bdsk-url-1 = {https://dblp.org/rec/journals/corr/abs-2207-02045},
+	bdsk-url-2 = {https://doi.org/10.48550/arXiv.2207.02045}}
+
+@article{DBLP:journals/corr/abs-2201-10874,
+	author = {Facundo Molina and Marcelo d'Amorim and Nazareno Aguirre},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/journals/corr/abs-2201-10874.bib},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	eprint = {2201.10874},
+	eprinttype = {arXiv},
+	journal = {CoRR},
+	timestamp = {Tue, 01 Feb 2022 00:00:00 +0100},
+	title = {Fuzzing Class Specifications},
+	url = {https://arxiv.org/abs/2201.10874},
+	volume = {abs/2201.10874},
+	year = {2022},
+	bdsk-url-1 = {https://dblp.org/rec/journals/corr/abs-2201-10874},
+	bdsk-url-2 = {https://arxiv.org/abs/2201.10874}}
+
+@inproceedings{DBLP:conf/kbse/CopiaPAGF22,
+	author = {Juan Manuel Copia and Pablo Ponzio and Nazareno Aguirre and Alessandra Gorla and Marcelo F. Frias},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/kbse/CopiaPAGF22.bib},
+	booktitle = {37th {IEEE/ACM} International Conference on Automated Software Engineering, {ASE} 2022, Rochester, MI, USA, October 10-14, 2022},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1145/3551349.3556965},
+	pages = {67:1--67:12},
+	publisher = {{ACM}},
+	timestamp = {Wed, 18 Jan 2023 00:00:00 +0100},
+	title = {{LISSA:} Lazy Initialization with Specialized Solver Aid},
+	url = {https://doi.org/10.1145/3551349.3556965},
+	year = {2022},
+	bdsk-url-1 = {https://dblp.org/rec/conf/kbse/CopiaPAGF22},
+	bdsk-url-2 = {https://doi.org/10.1145/3551349.3556965}}
+
+@inproceedings{DBLP:conf/kbse/BridaRZBNAF22,
+	author = {Sim{\'{o}}n Guti{\'{e}}rrez Brida and Germ{\'{a}}n Regis and Guolong Zheng and Hamid Bagheri and ThanhVu Nguyen and Nazareno Aguirre and Marcelo F. Frias},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/kbse/BridaRZBNAF22.bib},
+	booktitle = {37th {IEEE/ACM} International Conference on Automated Software Engineering, {ASE} 2022, Rochester, MI, USA, October 10-14, 2022},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1145/3551349.3556944},
+	pages = {55:1--55:13},
+	publisher = {{ACM}},
+	timestamp = {Sun, 15 Jan 2023 00:00:00 +0100},
+	title = {{ICEBAR:} Feedback-Driven Iterative Repair of Alloy Specifications},
+	url = {https://doi.org/10.1145/3551349.3556944},
+	year = {2022},
+	bdsk-url-1 = {https://dblp.org/rec/conf/kbse/BridaRZBNAF22},
+	bdsk-url-2 = {https://doi.org/10.1145/3551349.3556944}}
+
+@inproceedings{DBLP:conf/issta/ZhengNBRAFB22,
+	author = {Guolong Zheng and ThanhVu Nguyen and Sim{\'{o}}n Guti{\'{e}}rrez Brida and Germ{\'{a}}n Regis and Nazareno Aguirre and Marcelo F. Frias and Hamid Bagheri},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/issta/ZhengNBRAFB22.bib},
+	booktitle = {{ISSTA} '22: 31st {ACM} {SIGSOFT} International Symposium on Software Testing and Analysis, Virtual Event, South Korea, July 18 - 22, 2022},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1145/3533767.3534369},
+	editor = {Sukyoung Ryu and Yannis Smaragdakis},
+	pages = {666--677},
+	publisher = {{ACM}},
+	timestamp = {Tue, 26 Jul 2022 16:24:43 +0200},
+	title = {{ATR:} template-based repair for Alloy specifications},
+	url = {https://doi.org/10.1145/3533767.3534369},
+	year = {2022},
+	bdsk-url-1 = {https://dblp.org/rec/conf/issta/ZhengNBRAFB22},
+	bdsk-url-2 = {https://doi.org/10.1145/3533767.3534369}}
+
+@inproceedings{DBLP:conf/issre/MolinaPAF22,
+	author = {Facundo Molina and Pablo Ponzio and Nazareno Aguirre and Marcelo F. Frias},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/issre/MolinaPAF22.bib},
+	booktitle = {{IEEE} 33rd International Symposium on Software Reliability Engineering, {ISSRE} 2022, Charlotte, NC, USA, October 31 - Nov. 3, 2022},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1109/ISSRE55969.2022.00054},
+	pages = {494--504},
+	publisher = {{IEEE}},
+	timestamp = {Wed, 11 Jan 2023 13:11:43 +0100},
+	title = {Learning to Prune Infeasible Paths in Generalized Symbolic Execution},
+	url = {https://doi.org/10.1109/ISSRE55969.2022.00054},
+	year = {2022},
+	bdsk-url-1 = {https://dblp.org/rec/conf/issre/MolinaPAF22},
+	bdsk-url-2 = {https://doi.org/10.1109/ISSRE55969.2022.00054}}
+
+@inproceedings{DBLP:conf/icse/MolinadA22,
+	author = {Facundo Molina and Marcelo d'Amorim and Nazareno Aguirre},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/icse/MolinadA22.bib},
+	booktitle = {44th {IEEE/ACM} 44th International Conference on Software Engineering, {ICSE} 2022, Pittsburgh, PA, USA, May 25-27, 2022},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1145/3510003.3510120},
+	pages = {1008--1020},
+	publisher = {{ACM}},
+	timestamp = {Mon, 18 Jul 2022 16:47:42 +0200},
+	title = {Fuzzing Class Specifications},
+	url = {https://doi.org/10.1145/3510003.3510120},
+	year = {2022},
+	bdsk-url-1 = {https://dblp.org/rec/conf/icse/MolinadA22},
+	bdsk-url-2 = {https://doi.org/10.1145/3510003.3510120}}
+
+
+%%2021
+
+@inproceedings{DBLP:conf/deon/CastroCFA21,
+	author = {Pablo F. Castro and Valentin Cassano and Raul Fervari and Carlos Areces},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/deon/CastroCFA21.bib},
+	booktitle = {Deontic Logic and Normative Systems - 15th International Conference, {DEON} 2020/21, Munich, Germany [virtual], July 21-24, 2021},
+	date-added = {2023-12-05 16:05:52 -0300},
+	date-modified = {2023-12-05 16:05:52 -0300},
+	editor = {Fenrong Liu and Alessandra Marra and Paul Portner and Frederik Van De Putte},
+	pages = {77--93},
+	publisher = {College Publications},
+	timestamp = {Mon, 28 Aug 2023 10:20:20 +0200},
+	title = {Deontic Action Logics via Algebra},
+	url = {https://dblp.org/rec/conf/deon/CastroCFA21},
+	year = {2021},
+	bdsk-url-1 = {https://dblp.org/rec/conf/deon/CastroCFA21}}
+
+@article{DBLP:journals/corr/abs-2112-09811,
+	author = {Pablo F. Castro and Pedro R. D'Argenio and Luciano Putruele and Ramiro Demasi},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/journals/corr/abs-2112-09811.bib},
+	date-added = {2023-12-05 16:05:52 -0300},
+	date-modified = {2023-12-05 16:05:52 -0300},
+	eprint = {2112.09811},
+	eprinttype = {arXiv},
+	journal = {CoRR},
+	timestamp = {Mon, 03 Jan 2022 00:00:00 +0100},
+	title = {Playing Against Fair Adversaries in Stochastic Games with Total Rewards},
+	url = {https://arxiv.org/abs/2112.09811},
+	volume = {abs/2112.09811},
+	year = {2021},
+	bdsk-url-1 = {https://dblp.org/rec/journals/corr/abs-2112-09811},
+	bdsk-url-2 = {https://arxiv.org/abs/2112.09811}}
+
+@article{DBLP:journals/corr/abs-2105-12595,
+	author = {Mat{\'{\i}}as Brizzio and Renzo Degiovanni and Maxime Cordy and Mike Papadakis and Nazareno Aguirre},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/journals/corr/abs-2105-12595.bib},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	eprint = {2105.12595},
+	eprinttype = {arXiv},
+	journal = {CoRR},
+	timestamp = {Tue, 01 Jun 2021 01:00:00 +0200},
+	title = {Automated Repair of Unrealisable {LTL} Specifications Guided by Model Counting},
+	url = {https://arxiv.org/abs/2105.12595},
+	volume = {abs/2105.12595},
+	year = {2021},
+	bdsk-url-1 = {https://dblp.org/rec/journals/corr/abs-2105-12595},
+	bdsk-url-2 = {https://arxiv.org/abs/2105.12595}}
+
+@article{DBLP:journals/corr/abs-2103-00327,
+	author = {Sim{\'{o}}n Guti{\'{e}}rrez Brida and Germ{\'{a}}n Regis and Guolong Zheng and Hamid Bagheri and ThanhVu Nguyen and Nazareno Aguirre and Marcelo F. Frias},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/journals/corr/abs-2103-00327.bib},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	eprint = {2103.00327},
+	eprinttype = {arXiv},
+	journal = {CoRR},
+	timestamp = {Thu, 04 Mar 2021 00:00:00 +0100},
+	title = {Bounded Exhaustive Search of Alloy Specification Repairs},
+	url = {https://arxiv.org/abs/2103.00327},
+	volume = {abs/2103.00327},
+	year = {2021},
+	bdsk-url-1 = {https://dblp.org/rec/journals/corr/abs-2103-00327},
+	bdsk-url-2 = {https://arxiv.org/abs/2103.00327}}
+
+@article{DBLP:journals/corr/abs-2102-13569,
+	author = {Facundo Molina and Pablo Ponzio and Nazareno Aguirre and Marcelo F. Frias},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/journals/corr/abs-2102-13569.bib},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	eprint = {2102.13569},
+	eprinttype = {arXiv},
+	journal = {CoRR},
+	timestamp = {Tue, 02 Mar 2021 00:00:00 +0100},
+	title = {EvoSpex: An Evolutionary Algorithm for Learning Postconditions},
+	url = {https://arxiv.org/abs/2102.13569},
+	volume = {abs/2102.13569},
+	year = {2021},
+	bdsk-url-1 = {https://dblp.org/rec/journals/corr/abs-2102-13569},
+	bdsk-url-2 = {https://arxiv.org/abs/2102.13569}}
+
+@article{DBLP:journals/corr/abs-2102-10152,
+	author = {Guolong Zheng and ThanhVu Nguyen and Sim{\'{o}}n Guti{\'{e}}rrez Brida and Germ{\'{a}}n Regis and Marcelo F. Frias and Nazareno Aguirre and Hamid Bagheri},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/journals/corr/abs-2102-10152.bib},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	eprint = {2102.10152},
+	eprinttype = {arXiv},
+	journal = {CoRR},
+	timestamp = {Wed, 24 Feb 2021 00:00:00 +0100},
+	title = {{FLACK:} Counterexample-Guided Fault Localization for Alloy Models},
+	url = {https://arxiv.org/abs/2102.10152},
+	volume = {abs/2102.10152},
+	year = {2021},
+	bdsk-url-1 = {https://dblp.org/rec/journals/corr/abs-2102-10152},
+	bdsk-url-2 = {https://arxiv.org/abs/2102.10152}}
+
+@inproceedings{DBLP:conf/kbse/ZhengNBRFAB21,
+	author = {Guolong Zheng and ThanhVu Nguyen and Sim{\'{o}}n Guti{\'{e}}rrez Brida and Germ{\'{a}}n Regis and Marcelo F. Frias and Nazareno Aguirre and Hamid Bagheri},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/kbse/ZhengNBRFAB21.bib},
+	booktitle = {36th {IEEE/ACM} International Conference on Automated Software Engineering, {ASE} 2021, Melbourne, Australia, November 15-19, 2021},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1109/ASE51524.2021.9678740},
+	pages = {1218--1222},
+	publisher = {{IEEE}},
+	timestamp = {Mon, 24 Jan 2022 00:00:00 +0100},
+	title = {{FLACK:} Localizing Faults in Alloy Models},
+	url = {https://doi.org/10.1109/ASE51524.2021.9678740},
+	year = {2021},
+	bdsk-url-1 = {https://dblp.org/rec/conf/kbse/ZhengNBRFAB21},
+	bdsk-url-2 = {https://doi.org/10.1109/ASE51524.2021.9678740}}
+
+@inproceedings{DBLP:conf/kbse/BridaRZBNAF21,
+	author = {Sim{\'{o}}n Guti{\'{e}}rrez Brida and Germ{\'{a}}n Regis and Guolong Zheng and Hamid Bagheri and ThanhVu Nguyen and Nazareno Aguirre and Marcelo F. Frias},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/kbse/BridaRZBNAF21.bib},
+	booktitle = {36th {IEEE/ACM} International Conference on Automated Software Engineering, {ASE} 2021, Melbourne, Australia, November 15-19, 2021},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1109/ASE51524.2021.9678524},
+	pages = {1213--1217},
+	publisher = {{IEEE}},
+	timestamp = {Mon, 24 Jan 2022 16:18:34 +0100},
+	title = {BeAFix: An Automated Repair Tool for Faulty Alloy Models},
+	url = {https://doi.org/10.1109/ASE51524.2021.9678524},
+	year = {2021},
+	bdsk-url-1 = {https://dblp.org/rec/conf/kbse/BridaRZBNAF21},
+	bdsk-url-2 = {https://doi.org/10.1109/ASE51524.2021.9678524}}
+
+@inproceedings{DBLP:conf/icse/ZhengNBRFAB21a,
+	author = {Guolong Zheng and ThanhVu Nguyen and Sim{\'{o}}n Guti{\'{e}}rrez Brida and Germ{\'{a}}n Regis and Marcelo F. Frias and Nazareno Aguirre and Hamid Bagheri},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/icse/ZhengNBRFAB21a.bib},
+	booktitle = {43rd {IEEE/ACM} International Conference on Software Engineering: Companion Proceedings, {ICSE} Companion 2021, Madrid, Spain, May 25-28, 2021},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1109/ICSE-COMPANION52605.2021.00077},
+	pages = {179--180},
+	publisher = {{IEEE}},
+	timestamp = {Mon, 28 Jun 2021 01:00:00 +0200},
+	title = {Artifact of 'FLACK: Counterexample-Guided Fault Localization for Alloy Models'},
+	url = {https://doi.org/10.1109/ICSE-Companion52605.2021.00077},
+	year = {2021},
+	bdsk-url-1 = {https://dblp.org/rec/conf/icse/ZhengNBRFAB21a},
+	bdsk-url-2 = {https://doi.org/10.1109/ICSE-Companion52605.2021.00077}}
+
+@inproceedings{DBLP:conf/icse/ZhengNBRFAB21,
+	author = {Guolong Zheng and ThanhVu Nguyen and Sim{\'{o}}n Guti{\'{e}}rrez Brida and Germ{\'{a}}n Regis and Marcelo F. Frias and Nazareno Aguirre and Hamid Bagheri},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/icse/ZhengNBRFAB21.bib},
+	booktitle = {43rd {IEEE/ACM} International Conference on Software Engineering, {ICSE} 2021, Madrid, Spain, 22-30 May 2021},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1109/ICSE43902.2021.00065},
+	pages = {637--648},
+	publisher = {{IEEE}},
+	timestamp = {Mon, 03 Jan 2022 00:00:00 +0100},
+	title = {{FLACK:} Counterexample-Guided Fault Localization for Alloy Models},
+	url = {https://doi.org/10.1109/ICSE43902.2021.00065},
+	year = {2021},
+	bdsk-url-1 = {https://dblp.org/rec/conf/icse/ZhengNBRFAB21},
+	bdsk-url-2 = {https://doi.org/10.1109/ICSE43902.2021.00065}}
+
+@inproceedings{DBLP:conf/icse/MolinaPAF21a,
+	author = {Facundo Molina and Pablo Ponzio and Nazareno Aguirre and Marcelo F. Frias},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/icse/MolinaPAF21a.bib},
+	booktitle = {43rd {IEEE/ACM} International Conference on Software Engineering: Companion Proceedings, {ICSE} Companion 2021, Madrid, Spain, May 25-28, 2021},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1109/ICSE-COMPANION52605.2021.00080},
+	pages = {185--186},
+	publisher = {{IEEE}},
+	timestamp = {Mon, 28 Jun 2021 01:00:00 +0200},
+	title = {EvoSpex: An Evolutionary Algorithm for Learning Postconditions (artifact)},
+	url = {https://doi.org/10.1109/ICSE-Companion52605.2021.00080},
+	year = {2021},
+	bdsk-url-1 = {https://dblp.org/rec/conf/icse/MolinaPAF21a},
+	bdsk-url-2 = {https://doi.org/10.1109/ICSE-Companion52605.2021.00080}}
+
+@inproceedings{DBLP:conf/icse/MolinaPAF21,
+	author = {Facundo Molina and Pablo Ponzio and Nazareno Aguirre and Marcelo F. Frias},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/icse/MolinaPAF21.bib},
+	booktitle = {43rd {IEEE/ACM} International Conference on Software Engineering, {ICSE} 2021, Madrid, Spain, 22-30 May 2021},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1109/ICSE43902.2021.00112},
+	pages = {1223--1235},
+	publisher = {{IEEE}},
+	timestamp = {Mon, 07 Jun 2021 01:00:00 +0200},
+	title = {EvoSpex: An Evolutionary Algorithm for Learning Postconditions},
+	url = {https://doi.org/10.1109/ICSE43902.2021.00112},
+	year = {2021},
+	bdsk-url-1 = {https://dblp.org/rec/conf/icse/MolinaPAF21},
+	bdsk-url-2 = {https://doi.org/10.1109/ICSE43902.2021.00112}}
+
+@inproceedings{DBLP:conf/icse/BridaRZBNAF21a,
+	author = {Sim{\'{o}}n Guti{\'{e}}rrez Brida and Germ{\'{a}}n Regis and Guolong Zheng and Hamid Bagheri and ThanhVu Nguyen and Nazareno Aguirre and Marcelo F. Frias},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/icse/BridaRZBNAF21a.bib},
+	booktitle = {43rd {IEEE/ACM} International Conference on Software Engineering: Companion Proceedings, {ICSE} Companion 2021, Madrid, Spain, May 25-28, 2021},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1109/ICSE-COMPANION52605.2021.00093},
+	pages = {209--210},
+	publisher = {{IEEE}},
+	timestamp = {Mon, 28 Jun 2021 13:24:52 +0200},
+	title = {Artifact of Bounded Exhaustive Search of Alloy Specification Repairs},
+	url = {https://doi.org/10.1109/ICSE-Companion52605.2021.00093},
+	year = {2021},
+	bdsk-url-1 = {https://dblp.org/rec/conf/icse/BridaRZBNAF21a},
+	bdsk-url-2 = {https://doi.org/10.1109/ICSE-Companion52605.2021.00093}}
+
+@inproceedings{DBLP:conf/icse/BridaRZBNAF21,
+	author = {Sim{\'{o}}n Guti{\'{e}}rrez Brida and Germ{\'{a}}n Regis and Guolong Zheng and Hamid Bagheri and ThanhVu Nguyen and Nazareno Aguirre and Marcelo F. Frias},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/icse/BridaRZBNAF21.bib},
+	booktitle = {43rd {IEEE/ACM} International Conference on Software Engineering, {ICSE} 2021, Madrid, Spain, 22-30 May 2021},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
+	doi = {10.1109/ICSE43902.2021.00105},
+	pages = {1135--1147},
+	publisher = {{IEEE}},
+	timestamp = {Mon, 03 Jan 2022 00:00:00 +0100},
+	title = {Bounded Exhaustive Search of Alloy Specification Repairs},
+	url = {https://doi.org/10.1109/ICSE43902.2021.00105},
+	year = {2021},
+	bdsk-url-1 = {https://dblp.org/rec/conf/icse/BridaRZBNAF21},
+	bdsk-url-2 = {https://doi.org/10.1109/ICSE43902.2021.00105}}
+
 @inproceedings{DBLP:conf/fase/PonzioGRAAF21,
 	author = {Pablo Ponzio and Ariel Godio and Nicol{\'{a}}s Rosner and Marcelo Arroyo and Nazareno Aguirre and Marcelo F. Frias},
 	bibsource = {dblp computer science bibliography, https://dblp.org},
 	biburl = {https://dblp.org/rec/conf/fase/PonzioGRAAF21.bib},
 	booktitle = {Fundamental Approaches to Software Engineering - 24th International Conference, {FASE} 2021, Held as Part of the European Joint Conferences on Theory and Practice of Software, {ETAPS} 2021, Luxembourg City, Luxembourg, March 27 - April 1, 2021, Proceedings},
+	date-added = {2023-12-05 16:18:37 -0300},
+	date-modified = {2023-12-05 16:18:37 -0300},
 	doi = {10.1007/978-3-030-71500-7\_11},
 	editor = {Esther Guerra and Mari{\"{e}}lle Stoelinga},
 	pages = {218--239},
@@ -23,49 +707,13 @@
 	url = {https://doi.org/10.1007/978-3-030-71500-7\_11},
 	volume = {12649},
 	year = {2021},
-	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-030-71500-7%5C_11}}
+	bdsk-url-1 = {https://dblp.org/rec/conf/fase/PonzioGRAAF21},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-030-71500-7_11}}
 
-@article{DBLP:journals/corr/abs-2102-10152,
-	archiveprefix = {arXiv},
-	author = {Guolong Zheng and ThanhVu Nguyen and Sim{\'{o}}n Guti{\'{e}}rrez Brida and Germ{\'{a}}n Regis and Marcelo F. Frias and Nazareno Aguirre and Hamid Bagheri},
-	bibsource = {dblp computer science bibliography, https://dblp.org},
-	biburl = {https://dblp.org/rec/journals/corr/abs-2102-10152.bib},
-	eprint = {2102.10152},
-	journal = {CoRR},
-	timestamp = {Wed, 24 Feb 2021 15:42:45 +0100},
-	title = {{FLACK:} Counterexample-Guided Fault Localization for Alloy Models},
-	url = {https://arxiv.org/abs/2102.10152},
-	volume = {abs/2102.10152},
-	year = {2021},
-	Bdsk-Url-1 = {https://arxiv.org/abs/2102.10152}}
 
-@article{DBLP:journals/corr/abs-2102-13569,
-	archiveprefix = {arXiv},
-	author = {Facundo Molina and Pablo Ponzio and Nazareno Aguirre and Marcelo F. Frias},
-	bibsource = {dblp computer science bibliography, https://dblp.org},
-	biburl = {https://dblp.org/rec/journals/corr/abs-2102-13569.bib},
-	eprint = {2102.13569},
-	journal = {CoRR},
-	timestamp = {Tue, 02 Mar 2021 12:11:01 +0100},
-	title = {EvoSpex: An Evolutionary Algorithm for Learning Postconditions},
-	url = {https://arxiv.org/abs/2102.13569},
-	volume = {abs/2102.13569},
-	year = {2021},
-	Bdsk-Url-1 = {https://arxiv.org/abs/2102.13569}}
 
-@article{DBLP:journals/corr/abs-2103-00327,
-	archiveprefix = {arXiv},
-	author = {Sim{\'{o}}n Guti{\'{e}}rrez Brida and Germ{\'{a}}n Regis and Guolong Zheng and Hamid Bagheri and ThanhVu Nguyen and Nazareno Aguirre and Marcelo F. Frias},
-	bibsource = {dblp computer science bibliography, https://dblp.org},
-	biburl = {https://dblp.org/rec/journals/corr/abs-2103-00327.bib},
-	eprint = {2103.00327},
-	journal = {CoRR},
-	timestamp = {Thu, 04 Mar 2021 17:00:40 +0100},
-	title = {Bounded Exhaustive Search of Alloy Specification Repairs},
-	url = {https://arxiv.org/abs/2103.00327},
-	volume = {abs/2103.00327},
-	year = {2021},
-	Bdsk-Url-1 = {https://arxiv.org/abs/2103.00327}}
+
+
 
 @inproceedings{DBLP:conf/dali/CassanoFAC20,
 	author = {Valentin Cassano and Raul Fervari and Carlos Areces and Pablo F. Castro},
