--- a/downloads/mfis-pubs.bib
+++ b/downloads/mfis-pubs.bib
@@ -11,6 +11,196 @@
 
 %%last update november 2023 cesar.
 
+@article{DBLP:journals/pacmse/NolascoMDGGPUAF24,
+  author       = {Agust{\'{\i}}n Nolasco and
+                  Facundo Molina and
+                  Renzo Degiovanni and
+                  Alessandra Gorla and
+                  Diego Garbervetsky and
+                  Mike Papadakis and
+                  Sebasti{\'{a}}n Uchitel and
+                  Nazareno Aguirre and
+                  Marcelo F. Frias},
+  title        = {Abstraction-Aware Inference of Metamorphic Relations},
+  journal      = {Proc. {ACM} Softw. Eng.},
+  volume       = {1},
+  number       = {{FSE}},
+  pages        = {450--472},
+  year         = {2024},
+  url          = {https://doi.org/10.1145/3643747},
+  doi          = {10.1145/3643747},
+  timestamp    = {Fri, 02 Aug 2024 21:41:22 +0200},
+  biburl       = {https://dblp.org/rec/journals/pacmse/NolascoMDGGPUAF24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/scp/PolitanoBMAFP24,
+  author       = {Mariano Politano and
+                  Valeria S. Bengolea and
+                  Facundo Molina and
+                  Nazareno Aguirre and
+                  Marcelo F. Frias and
+                  Pablo Ponzio},
+  title        = {{BEAPI:} {A} tool for bounded exhaustive input generation from APIs},
+  journal      = {Sci. Comput. Program.},
+  volume       = {238},
+  pages        = {103153},
+  year         = {2024},
+  url          = {https://doi.org/10.1016/j.scico.2024.103153},
+  doi          = {10.1016/J.SCICO.2024.103153},
+  timestamp    = {Mon, 03 Mar 2025 22:21:56 +0100},
+  biburl       = {https://dblp.org/rec/journals/scp/PolitanoBMAFP24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/tse/UchitelCPAABBBCDFHHLLMM24,
+  author       = {Sebasti{\'{a}}n Uchitel and
+                  Marsha Chechik and
+                  Massimiliano Di Penta and
+                  Bram Adams and
+                  Nazareno Aguirre and
+                  Gabriele Bavota and
+                  Domenico Bianculli and
+                  Kelly Blincoe and
+                  Ana Cavalcanti and
+                  Yvonne Dittrich and
+                  Filomena Ferrucci and
+                  Rashina Hoda and
+                  LiGuo Huang and
+                  David Lo and
+                  Michael R. Lyu and
+                  Lei Ma and
+                  Jonathan I. Maletic and
+                  Leonardo Mariani and
+                  Collin McMillan and
+                  Tim Menzies and
+                  Martin Monperrus and
+                  Ana Moreno and
+                  Nachiappan Nagappan and
+                  Liliana Pasquale and
+                  Patrizio Pelliccione and
+                  Michael Pradel and
+                  Rahul Purandare and
+                  Sukyoung Ryu and
+                  Mehrdad Sabetzadeh and
+                  Alexander Serebrenik and
+                  Jun Sun and
+                  Chakkrit Kla Tantithamthavorn and
+                  Christoph Treude and
+                  Manuel Wimmer and
+                  Yingfei Xiong and
+                  Tao Yue and
+                  Andy Zaidman and
+                  Tao Zhang and
+                  Hao Zhong},
+  title        = {Scoping Software Engineering for {AI:} The {TSE} Perspective},
+  journal      = {{IEEE} Trans. Software Eng.},
+  volume       = {50},
+  number       = {11},
+  pages        = {2709--2711},
+  year         = {2024},
+  url          = {https://doi.org/10.1109/TSE.2024.3470368},
+  doi          = {10.1109/TSE.2024.3470368},
+  timestamp    = {Mon, 03 Mar 2025 22:26:08 +0100},
+  biburl       = {https://dblp.org/rec/journals/tse/UchitelCPAABBBCDFHHLLMM24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/icse/CarvalhoDCATP24,
+  author       = {Luiz Carvalho and
+                  Renzo Degiovanni and
+                  Maxime Cordy and
+                  Nazareno Aguirre and
+                  Yves Le Traon and
+                  Mike Papadakis},
+  title        = {SpecBCFuzz: Fuzzing {LTL} Solvers with Boundary Conditions},
+  booktitle    = {Proceedings of the 46th {IEEE/ACM} International Conference on Software
+                  Engineering, {ICSE} 2024, Lisbon, Portugal, April 14-20, 2024},
+  pages        = {123:1--123:13},
+  publisher    = {{ACM}},
+  year         = {2024},
+  url          = {https://doi.org/10.1145/3597503.3639087},
+  doi          = {10.1145/3597503.3639087},
+  timestamp    = {Sun, 19 Jan 2025 13:14:50 +0100},
+  biburl       = {https://dblp.org/rec/conf/icse/CarvalhoDCATP24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/zum/CornejoNPAFBR24,
+  author       = {C{\'{e}}sar Cornejo and
+                  Mar{\'{\i}}a Marta Novaira and
+                  Sonia Permigiani and
+                  Nazareno Aguirre and
+                  Marcelo F. Frias and
+                  Sim{\'{o}}n Guti{\'{e}}rrez Brida and
+                  Germ{\'{a}}n Regis},
+  editor       = {Silvia Bonfanti and
+                  Angelo Gargantini and
+                  Michael Leuschel and
+                  Elvinia Riccobene and
+                  Patrizia Scandurra},
+  title        = {An Analysis of the Impact of Field-Value Instance Navigation in Alloy's
+                  Model Finding},
+  booktitle    = {Rigorous State-Based Methods - 10th International Conference, {ABZ}
+                  2024, Bergamo, Italy, June 25-28, 2024, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {14759},
+  pages        = {141--159},
+  publisher    = {Springer},
+  year         = {2024},
+  url          = {https://doi.org/10.1007/978-3-031-63790-2\_9},
+  doi          = {10.1007/978-3-031-63790-2\_9},
+  timestamp    = {Mon, 03 Mar 2025 21:25:08 +0100},
+  biburl       = {https://dblp.org/rec/conf/zum/CornejoNPAFBR24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{DBLP:data/11/NolascoMDGGPUAF24,
+  author       = {Agust{\'{\i}}n Nolasco and
+                  Facundo Molina and
+                  Renzo Degiovanni and
+                  Alessandra Gorla and
+                  Diego Garbervetsky and
+                  Mike Papadakis and
+                  Sebasti{\'{a}}n Uchitel and
+                  Nazareno Aguirre and
+                  Marcelo F. Frias},
+  title        = {Abstraction-Aware Inference of Metamorphic Relations (Replication
+                  Package) (Version 1)},
+  publisher    = {Zenodo},
+  year         = {2024},
+  month        = feb,
+  howpublished = {\url{https://doi.org/10.5281/zenodo.10683011}},
+  note         = {Accessed on YYYY-MM-DD.},
+  url          = {https://doi.org/10.5281/zenodo.10683011},
+  doi          = {10.5281/ZENODO.10683011},
+  timestamp    = {Wed, 22 Jan 2025 12:12:25 +0100},
+  biburl       = {https://dblp.org/rec/data/11/NolascoMDGGPUAF24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/spin/PutrueleDCD24,
+  author       = {Luciano Putruele and
+                  Ramiro Demasi and
+                  Pablo F. Castro and
+                  Pedro R. D'Argenio},
+  editor       = {Thomas Neele and
+                  Anton Wijs},
+  title        = {Tolerange: Quantifying Fault Masking in Stochastic Systems},
+  booktitle    = {Model Checking Software - 30th International Symposium, {SPIN} 2024,
+                  Luxembourg City, Luxembourg, April 8-9, 2024, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {14624},
+  pages        = {176--183},
+  publisher    = {Springer},
+  year         = {2024},
+  url          = {https://doi.org/10.1007/978-3-031-66149-5\_10},
+  doi          = {10.1007/978-3-031-66149-5\_10},
+  timestamp    = {Wed, 06 Nov 2024 22:17:12 +0100},
+  biburl       = {https://dblp.org/rec/conf/spin/PutrueleDCD24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
 
 @article{DBLP:journals/tse/CornejoRAF23,
 	author = {C{\'{e}}sar Cornejo and Germ{\'{a}}n Regis and Nazareno Aguirre and Marcelo F. Frias},
