--- a/downloads/mfis-pubs.bib
+++ b/downloads/mfis-pubs.bib
@@ -7,7 +7,30 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+% Last update by cesar: without CoRR/arxiv. 
 
+@article{DBLP:journals/tosem/ZeminGCDBRAF25,
+  author       = {Luciano Zem{\'{\i}}n and
+                  Ariel Godio and
+                  C{\'{e}}sar Cornejo and
+                  Renzo Degiovanni and
+                  Sim{\'{o}}n Guti{\'{e}}rrez Brida and
+                  Germ{\'{a}}n Regis and
+                  Nazareno Aguirre and
+                  Marcelo Fabian Frias},
+  title        = {An Empirical Study on the Suitability of Test-based Patch Acceptance
+                  Criteria},
+  journal      = {{ACM} Trans. Softw. Eng. Methodol.},
+  volume       = {34},
+  number       = {3},
+  pages        = {57:1--57:20},
+  year         = {2025},
+  url          = {https://doi.org/10.1145/3702971},
+  doi          = {10.1145/3702971},
+  timestamp    = {Wed, 11 Jun 2025 21:01:33 +0200},
+  biburl       = {https://dblp.org/rec/journals/tosem/ZeminGCDBRAF25.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
 
 %%last update november 2023 cesar.
 
